--- a/app/src/main/res/layout/fragment_add_store_food.xml
+++ b/app/src/main/res/layout/fragment_add_store_food.xml
@@ -16,13 +16,13 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/add_Food_category"
-            android:id="@+id/textView2"
+            android:id="@+id/category_TextView"
             android:layout_gravity="center_vertical" />
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:id="@+id/spinner"
+            android:id="@+id/category_Spinner"
             android:layout_gravity="center_vertical"
             android:spinnerMode="dialog" />
 
@@ -39,13 +39,13 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/add_Food_name"
-            android:id="@+id/textView3"
+            android:id="@+id/name_TextView"
             android:layout_gravity="center_vertical" />
 
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/editText"
+            android:id="@+id/name_EditText"
             android:layout_weight="0.08"
             android:layout_gravity="center_vertical" />
 
@@ -53,7 +53,7 @@
             android:layout_width="42dp"
             android:layout_height="wrap_content"
             android:text="+"
-            android:id="@+id/button"
+            android:id="@+id/quickAdd_Button"
             android:layout_gravity="center_vertical" />
     </TableRow>
 
@@ -68,7 +68,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/add_Food_count"
-            android:id="@+id/textView4"
+            android:id="@+id/amount_TextView"
             android:layout_gravity="center_vertical" />
 
         <EditText
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:inputType="numberSigned"
             android:ems="10"
-            android:id="@+id/editText2"
+            android:id="@+id/amount_EditText"
             android:layout_weight="1" />
     </TableRow>
 
@@ -91,13 +91,13 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/add_Food_unit"
-            android:id="@+id/textView5"
+            android:id="@+id/unit_TextView"
             android:layout_gravity="center_vertical" />
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:id="@+id/spinner2"
+            android:id="@+id/unit_Spinner"
             android:layout_gravity="center_vertical"
             android:spinnerMode="dialog" />
     </TableRow>
@@ -113,13 +113,13 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/add_Food_StorageLocation"
-            android:id="@+id/textView6"
+            android:id="@+id/storedLoc_TextView"
             android:layout_gravity="center_vertical" />
 
         <Spinner
             android:layout_width="wrap_content"
             android:layout_height="40dp"
-            android:id="@+id/spinner3"
+            android:id="@+id/storedLoc_Spinner"
             android:layout_gravity="center_vertical"
             android:spinnerMode="dialog" />
     </TableRow>
@@ -135,7 +135,7 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="@string/add_Food_StorageTime"
-            android:id="@+id/textView7"
+            android:id="@+id/outDated_TextView"
             android:layout_gravity="center_vertical" />
 
         <EditText
@@ -143,7 +143,7 @@
             android:layout_height="wrap_content"
             android:inputType="date"
             android:ems="10"
-            android:id="@+id/editText3"
+            android:id="@+id/outDated_EditText"
             android:layout_weight="1"
             android:layout_gravity="center_vertical" />
 
@@ -159,14 +159,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="新增"
-            android:id="@+id/button2"
+            android:id="@+id/newFood_Button"
             android:layout_gravity="center_vertical" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="取消"
-            android:id="@+id/button3"
+            android:id="@+id/cancel_Button"
             android:layout_gravity="center_vertical" />
     </TableRow>
 
