--- a/app/src/main/res/layout/storage_location_item.xml
+++ b/app/src/main/res/layout/storage_location_item.xml
@@ -9,8 +9,7 @@
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:id="@+id/imageView"
-    />
+        android:id="@+id/imageView" />
 
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/textView"
