--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -2,9 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
-    <!--TODO : 換成+號圖案-->
     <item android:id="@+id/add_import_food"
-        android:icon="@drawable/abc_ic_commit_search_api_mtrl_alpha"
+        android:icon="@drawable/icon_plus"
         android:title="@string/add_import_food"
         app:showAsAction="ifRoom" />
 </menu>
