--- a/app/src/main/res/layout/fragment_add_store_food.xml
+++ b/app/src/main/res/layout/fragment_add_store_food.xml
@@ -24,7 +24,7 @@
             android:layout_height="40dp"
             android:id="@+id/category_Spinner"
             android:layout_gravity="center_vertical"
-            android:spinnerMode="dialog" />
+            android:spinnerMode="dropdown" />
 
     </TableRow>
 
