--- a/app/src/main/res/layout/fragment_add_store_food.xml
+++ b/app/src/main/res/layout/fragment_add_store_food.xml
@@ -186,7 +186,7 @@
     </TableRow>
 
     <TableRow
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_weight="0.08">
